small spacing fixes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -372,6 +372,10 @@ a:hover {
         width: 85%;
         height: 65vh;
     }
+
+    .pt-3-mob {
+        padding-top: 2rem !important;
+    }
 }
 
 // Small devices
